feat: Composite에 따른 SelectEventHandler 수정